# ai-triage-agent

./: .env  .env.example  .gitignore  ARCHITECTURE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: prompts.yaml
docs/: eval_methodology.md  interview_prep.md  jd_mapping.md  mcp_setup.md  walkthrough.md
evals/: deepeval_metrics.py  harness.py  judge.py  report.py
evals/fixtures/: fixture_01_cuda_oom.json  fixture_02_import_error.json  fixture_03_regression_diff.json  fixture_04_flaky_timeout.json  fixture_05_env_mismatch.json
scripts/: run_triage.py
src/ai_triage_agent/: __init__.py
src/ai_triage_agent/agents/: diff_analyzer.py  log_analyzer.py  rca_synthesizer.py
src/ai_triage_agent/graph/: state.py  workflow.py
src/ai_triage_agent/mcp/: server.py
src/ai_triage_agent/mcp/tools/: fetch_test_logs.py  get_git_diff.py
src/ai_triage_agent/utils/: llm_client.py  prompt_loader.py
tests/: test_agents.py  test_deepeval.py  test_graph.py  test_mcp_tools.py
